View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030899 | Open CASCADE | OCCT:Data Exchange | public | 2019-08-14 15:06 | 2019-08-17 12:24 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030899: Data Exchange, RWObj_Reader - reading multiline file with more than one line separator leads to memory corruption | ||||
Description | Some OBJ files might contain newline separator \ for splitting too long lines. Reading such files with more than one splitter at ones leads to memory corruption. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | de_mesh/obj_read/multiline | ||||
|
multiline.obj (668 bytes) |
|
Branch CR30899 has been created by kgv. SHA-1: e42b729de357c4946cbec657b3596e293d0cdfc9 Detailed log of new commits: Author: kgv Date: Wed Aug 14 15:06:55 2019 +0300 0030899: Data Exchange, RWObj_Reader - reading multiline file with more than one line separator leads to memory corruption Fix misprint in condition. |
|
Please take the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30899-master-KGV |
|
Combination - OCCT branch : CR30899 master SHA - e42b729de357c4946cbec657b3596e293d0cdfc9 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 1144fe7d76516b4f51602e5bca86c8f2a51359c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16240.440000000053 / 16274.830000000024 [-0.21%] Products Total CPU difference: 10458.480000000038 / 10475.390000000047 [-0.16%] Windows-64-VC14: OCCT Total CPU difference: 17720.28125 / 17627.84375 [+0.52%] Products Total CPU difference: 12012.859375 / 11990.921875 [+0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30899 has been deleted by inv. SHA-1: e42b729de357c4946cbec657b3596e293d0cdfc9 |
occt: master 5e2477a7 2019-08-14 12:06:55 Committer: bugmaster Details Diff |
0030899: Data Exchange, RWObj_Reader - reading multiline file with more than one line separator leads to memory corruption Fix misprint in condition. |
Affected Issues 0030899 |
|
mod - src/RWObj/RWObj_Reader.cxx | Diff File | ||
add - tests/de_mesh/obj_read/multiline | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-08-14 15:06 | kgv | New Issue | |
2019-08-14 15:06 | kgv | Assigned To | => kgv |
2019-08-14 15:06 | kgv | File Added: multiline.obj | |
2019-08-14 15:17 | git | Note Added: 0086246 | |
2019-08-14 16:36 | kgv | Note Added: 0086247 | |
2019-08-14 16:36 | kgv | Severity | minor => trivial |
2019-08-14 16:36 | kgv | Assigned To | kgv => bugmaster |
2019-08-14 16:36 | kgv | Status | new => resolved |
2019-08-14 16:36 | kgv | Status | resolved => reviewed |
2019-08-14 19:56 | bugmaster | Test case number | => de_mesh/obj_read/multiline |
2019-08-14 19:59 | bugmaster | Note Added: 0086249 | |
2019-08-14 19:59 | bugmaster | Status | reviewed => tested |
2019-08-17 12:07 | bugmaster | Changeset attached | => occt master 5e2477a7 |
2019-08-17 12:07 | bugmaster | Status | tested => verified |
2019-08-17 12:07 | bugmaster | Resolution | open => fixed |
2019-08-17 12:24 | git | Note Added: 0086299 |