0030899: Data Exchange, RWObj_Reader - reading multiline file with more than one line separator leads to memory corruption

Fix misprint in condition.